<resources>
    <string name="app_name">What A\nMess</string>
    <string name="email_hint">Email</string>
    <string name="Password_hint">Password</string>
    <string name="sign_in_btn">sign in</string>
    <string name="register_user_txt">Register User</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="tos_about_txt">Press the link to see our Terms of Service</string>
    <string name="tos_txt">https://what-a-mess.flycricket.io/privacy.html</string>
    <string name="terms_of_service_txt">Terms of Service</string>
    <string name="terms_of_service_box">Do you agree with the Terms of Service?</string>
    <string name="settings_menu">Settings</string>
    <string name="log_out_menu">Log out</string>
    <string name="settings_txt">Settings</string>
    <string name="homepage_txt">Homepage</string>
    <string name="userid_txt">Logged in as:\n</string>
    <string name="profile_txt">Profile</string>

    //--- MainSettings strings ---//
    <string name="change_profile_pic_txt">Change profile picture</string>
    <string name="name_title_txt">Name</string>
    <string name="password_title_txt">Password</string>
    <string name="password_hint">New password</string>
    <string name="email_title_txt">Email</string>
    <string name="change_email_hint">Change Email</string>
    <string name="update_profile_txt">Update profile</string>
    <string name="user_bio_txt">Bio</string>
    <string name="user_bio_hint">Write your bio here</string>
    <string name="gender_title_txt">Gender</string>
    <string name="from_title_txt">From</string>
    <string name="from_hint">Write your nationality</string>
    <string name="man_btn">Man</string>
    <string name="woman_btn">Woman</string>
    <string name="age_title_txt">Age</string>
    <string name="age_txt">Your age is: </string>
    <string name="choose_date">Calender</string>
    <string name="account_settings">Account Settings</string>
    <string name="wrong_gender">You have choose something. Try again!</string>

    <string-array name="gender_choices">
        <item>Choose your gender</item>
        <item>Man</item>
        <item>Woman</item>
    </string-array>

    //---firebase adding user---//
    <string name="db_users">users</string>
    <string name="field_name">name</string>
    <string name="field_email">email</string>
    <string name="field_bio">bio</string>
    <string name="field_from">from</string>
    <string name="field_age">age</string>
    <string name="field_gender">gender</string>
    <string name="field_picture">profile_picture</string>
    <string name="user_data_txt">User data</string>

    <string name="theme">Theme</string>
    <string name="log_out_txt">Log out</string>
    <string name="delete_account_txt">Delete account</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="add_friend_menu">add friend</string>

    //---Fragment_search_user---//
    <string name="find_friend_hint">Search for a user here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_wheel_item">settings_item</string>
    <string name="type_a_message_txt">Type a message...</string>
    <string name="bio_txt">Bio</string>
    <string name="delete_history_txt">Delete conversation history</string>
    <string name="confirm_delete_conversation_txt">Are you sure you want to delete all conversation history</string>
    <string name="no_message_txt">No Message</string>
    <string name="history_deleted_toast">Conversation history deleted.</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="long_click_toast">Long Clicked</string>
    <string name="delete_friend_txt">Delete friend</string>
    <string name="confirm_delete_friend_part1_txt">Are you sure you want to delete </string>
    <string name="confirm_delete_friend_part2_txt"> as friend?</string>
    <string name="friend_removed_toast">Friend removed</string>
    <string name="empty_message_toast">"You can't send empty message"</string>
    <string name="login_txt">Login in</string>
    <string name="authentication_failed_txt">Authentication failed</string>
    <string name="invalid_email_txt">invalid email input</string>
    <string name="onauthentication_toast">"Authenticated with: </string>
    <string name="password_not_match_toast">Password doesn\'t match</string>
    <string name="too_short_password_toast">password too short, need to be atleast 6 characters</string>
    <string name="all_field_toast">You have to fill all the fields"</string>
    <string name="unable_register_toast">Unable to register</string>
    <string name="day_theme_toast">Day theme activated</string>
    <string name="night_theme_toast">Night theme activated</string>
    <string name="email_updated">Email updated</string>
    <string name="email_not_updated">Email not updated</string>
    <string name="enter_email_txt">Enter a new email</string>
    <string name="password_updated_toast">Password updated</string>
    <string name="password_not_updated_toast">Password not updated</string>
    <string name="report_a_problem">Report a problem</string>

    <string name="hint_report">Report...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Report not save because it is empty</string>

    //--- GroupListAdapter ---//
    <string name="delete_group">Delete group</string>
    <string name="delete_group_sure">Are you sure you want to delete group and all conversation history</string>
    <string name="profile_updated">Profile updated</string>

    //---Invite friends to app using firebase---//
    <string name="invitation_title">Invitation</string>
    <string name="message_text">Discover our new chat app: What A Mess</string>
    <string name="image">https://www.xda-developers.com/files/2013/05/mobile-phone-apps.jpg</string>
    <string name="register_title">Register</string>

    <string name="reports_title">Reports</string>


</resources>
