<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email_register_edittxt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_register_edittxt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_register_edittxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirm_password_register_edittxt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_register_edittxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_register_edittxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register_btn"
        android:onClick="registerOnClick"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />


    </RelativeLayout>

</RelativeLayout>