<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activities.MainSettings">


        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/settings_menu"
            android:textColor="@color/daynight"
            android:textSize="30sp" />

        <include
            android:id="@+id/user_settings_toolbar"
            layout="@layout/mtoolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_mainpic_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/settings_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="changePic"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/change_profile_pic"
            android:layout_toEndOf="@+id/user_mainpic_view"
            android:onClick="takePic"
            android:src="@drawable/cameraicon"
            android:tint="@color/daynight" />

        <TextView
            android:id="@+id/change_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_mainpic_view"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:onClick="changePic"
            android:text="@string/change_profile_pic_txt"
            android:textColor="@color/daynight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/user_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_profile_pic"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_title_txt"
            android:textColor="@color/daynight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_name_mainsettings_edittxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/name_title_txt"
            android:background="@drawable/round_corners_edittext"
            android:hint="@string/name_title_txt"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/daynight" />

        <TextView
            android:id="@+id/user_bio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_mainsettings_edittxt"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_bio_txt"
            android:textColor="@color/daynight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_bio_edittxt"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/user_bio_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/user_bio_hint"
            android:background="@drawable/round_corners_edittext"
            android:gravity="top"
            android:hint="@string/user_bio_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/daynight" />

        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_bio_edittxt"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/gender_title_txt"
            android:textColor="@color/daynight"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/gender_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_title"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/age_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_layout"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/age_title_txt"
            android:textColor="@color/daynight"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/age_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/age_title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/your_age_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/age_txt"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/age_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="15"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/calender_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/calendar_icon"
                android:text="@string/choose_date" />
        </LinearLayout>

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/age_layout"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_title_txt"
            android:textColor="@color/daynight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_password_edittxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/password_hint"
            android:background="@drawable/round_corners_edittext"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/daynight" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_password_edittxt"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_title_txt"
            android:textColor="@color/daynight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_mainsettings_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/change_email_hint"
            android:background="@drawable/round_corners_edittext"
            android:hint="@string/change_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/daynight" />

        <TextView
            android:id="@+id/submit_mainemail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_mainsettings_edittext"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:onClick="updateUser"
            android:text="@string/update_profile_txt"
            android:textColor="@color/colorAccent" />

        <View
            android:id="@+id/divider_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/submit_mainemail_btn"
            android:layout_margin="10dp"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_line"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="theme"
            android:text="@string/theme"
            android:textColor="@color/daynight"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider_line_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/theme"
            android:layout_margin="10dp"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_line_two"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="termsOfService"
            android:text="@string/terms_of_service"
            android:textColor="@color/daynight"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider_line_two_and_half"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/terms_of_service"
            android:layout_margin="10dp"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/report_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_line_two_and_half"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="reportAproblem"
            android:text="@string/report_a_problem"
            android:textColor="@color/daynight"
            android:textSize="25sp" />


        <View
            android:id="@+id/divider_line_three"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/report_problem"
            android:layout_margin="10dp"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_line_three"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="logOut"
            android:text="@string/log_out_txt"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_out"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="deleteAccount"
            android:text="@string/delete_account_txt"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <FrameLayout
            android:id="@+id/fragment_holder_main_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</ScrollView>