<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/mtoolbar" />

    <ImageView
        android:id="@+id/shutAppLogo_img"
        android:layout_below="@id/settings_toolbar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email_edittxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/round_corners_edittext"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/daynight" />

    <EditText
        android:id="@+id/password_edittxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edittxt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corners_edittext"
        android:hint="@string/Password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/daynight" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edittxt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corners_edittext"
        android:onClick="submitOnClick"
        android:text="@string/sign_in_btn"
        android:textColor="@color/daynight" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register_user_txt"
        android:textColor="@color/linkBlue"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/progressBar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>